# WRF-Hydro-BMI

./: .gitignore  .gitmodules  CLAUDE.md  babel.toml  wrfhydro-bmi-snapshot-20260225.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-fpic-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-shared-library-install/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-python-validation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-documentation/: 04-01-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-library-hardening/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-babelizer-environment-skeleton/: .continue-here.md  06-01-PLAN.md  06-01-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-package-build/: .continue-here.md  07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-bmi-compliance-validation/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VERIFICATION.md  bmi-tester-output.txt
.planning/phases/09-pymt-integration/: .continue-here.md  09-CONTEXT.md  09-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
bmi_wrf_hydro/: CMakeLists.txt  bmiwrfhydrof.pc.cmake  build.sh  rebuild_fpic.sh
bmi_wrf_hydro/Docs/: 1.Complete_Beginners_Guide_WRFHydro_SCHISM_BMI_PyMT.md  10_SCHISM_BMI_How_To_Run_Complete_Guide.md  11_SCHISM_BMI_Implementation_Deep_Dive_Concepts.md  12_BMI_Implementation_Concepts_Heat_SCHISM_WRFHydro.md  13_SCHISM_And_Its_BMI_Complete_Deep_Dive.docx  13_SCHISM_And_Its_BMI_Complete_Deep_Dive.md  14_WRF_Hydro_Model_Complete_Deep_Dive.md  15_BMI_WRF_Hydro_Build_Test_Complete_Guide.md  16_Shared_Library_Python_Babelizer_Complete_Guide.md  18_BMI_Compliance_Validation_Complete_Guide.md  2.BMI_Complete_Detailed_Guide.md  3.CSDMS_Standard_Names_Complete_Guide.md  4.Babelizer_Complete_Guide.md  5.PyMT_Complete_Guide.md  6.Project_Framework_Complete_Guide.md  7_WRF_Hydro_Beginners_Guide_For_ML_Engineers.md  8_BMI_Template_And_Heat_Model_Complete_Code_Guide.md  9_BMI_Architecture_SCHISM_vs_WRFHydro_Complete_Guide.md  create_doc13_docx.py
bmi_wrf_hydro/Docs/Plan/: BMI_Implementation_Master_Plan.md  BMI_WRF_Hydro_Detailed_Technical_Plan.md
bmi_wrf_hydro/Docs/Weekly Reporting/: 20_Feb_2026_WRF_Hydro_BMI.pptx  20_Feb_2026_WRF_Hydro_BMI_v2.pptx  BMI_Architecture_Strategy.pptx  SCHISM_BMI_Deep_Dive.pptx  create_20feb_ppt.py  create_ppt.py  create_schism_bmi_ppt.py
bmi_wrf_hydro/src/: bmi_wrf_hydro.f90  bmi_wrf_hydro_c.f90  hydro_stop_shim.f90
bmi_wrf_hydro/tests/: bmi_minimal_test.f90  bmi_wrf_hydro_test.f90  conftest.py  run_bmi_tester.py  test_bmi_python.py
pymt_wrfhydro/: .gitignore  CHANGES.rst  CREDITS.rst  LICENSE  MANIFEST.in  README.rst  babel.toml  pyproject.toml  requirements-library.txt  setup.py  validate.sh
pymt_wrfhydro/.github/workflows/: flake8.yml  test.yml
pymt_wrfhydro/docs/: conf.py  index.rst  installation.rst
pymt_wrfhydro/meta/WrfHydroBmi/: api.yaml
pymt_wrfhydro/pymt_wrfhydro/: __init__.py  bmi.py
pymt_wrfhydro/pymt_wrfhydro/lib/: __init__.py  bmi_interoperability.f90  wrfhydrobmi.pyx
pymt_wrfhydro/recipe/: meta.yaml
pymt_wrfhydro/tests/: conftest.py  generate_reference.py  test_bmi_wrfhydro.py  test_e2e_standalone.py
pymt_wrfhydro/tests/data/: croton_ny_reference.npz
